--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
+# Terraform files
 .terraform/
 *.tfstate
 *.tfstate.backup
 .terraform.lock.hcl
+crash.log
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
